--- a/templates/partials/signin-form.html
+++ b/templates/partials/signin-form.html
@@ -1,4 +1,4 @@
-<form action="/api/auth/signin" method="post">
+<form action="/signin" method="post">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
