Support for deleting twits, minor styling to min usability, some error handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
 
     ${signinform}
 
+    ${
+        err ? `<p>${err} -- Please try again.</p>` : ''
+    }
+
     <h3>Otherwise, please <a href="/signup">Sign Up...</a></h3>
     
 </body>
