--- a/templates/signup-success.html
+++ b/templates/signup-success.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twit-ish</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
     <h1>Signup Successful!</h1>
 
     <h2>Please Sign In...</h2>
+
+    <div class="project-meta">
+        <p>This page demonstrates Express Templates.</p>
+    </div>
 
     ${signinform}
 </body>
