--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Twit-ish</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
+    <div class="project-meta">
+        This page demonstrates writing to Postgres, as well as Express templates if there is an error.
+    </div>
+
     <form action="/api/auth/signup" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" required>
@@ -20,7 +25,7 @@
     </form>
     
     ${
-        err ? `<p>${err} -- Please try again.</p>` : ''
+        err ? `<p class='errmsg'>${err} -- Please try again.</p>` : ''
     }
 </body>
 </html>
