Corrected signup stylesheet reference

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
         This page demonstrates writing to Postgres, as well as Express templates if there is an error.
     </div>
 
-    <form action="/api/auth/signup" method="post">
+    <form action="/signup" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" required>
         <label for="screenname">Screenname</label>
