Cleaned up the routes

--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -26,6 +26,6 @@
 
     ${updateStatus ? `<p class='statusmsg'>${updateStatus}</p>` : '<br>'}
 
-    <a href="/twits">Back to the Twits!</a>
+    <a href="/">Back to the Twits!</a>
 </body>
 </html>
