--- a/templates/index.html
+++ b/templates/index.html
@@ -8,26 +8,35 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-    <h1>Welcome to Twit-ish!</h1>
-
     <div class="project-meta">
-        <p>This is my Digitalcrafts Flex 2021 CRUD backend project. It is a lightweight Twitter clone that 
-            is used to demonstrate the following backend technologies: bcrypt, JWT, Express, Express 
-            Templates, Sequelize, Postgres</p>
-
-        <p>This page demonstrates: Reading from Postgres, authorization and token creation via bcrypt and JWT 
-            as well as Express Templates if there is an error.</p>
+        This page demonstrates reading, writing, and deleting from Postgres, as well as Express 
+        templates and JWT token validation.
     </div>
-
-    <h2>Existing user? Please Sign In...</h2>
-
-    ${signinform}
-
-    ${
-        err ? `<div class='errmsg'><p>${err} -- Please try again.</p></div>` : ''
-    }
-
-    <h3>Otherwise, please <a href="/signup">Sign Up...</a></h3>
+    <div class="twitcontainer">
+        ${
+            twits.reduce((accum, aTwit) => accum + 
+            `<div id="twit-${aTwit.id}" class="twitpanel">
+                    <p class='twithead'><span class="twitwho">${aTwit.user.screenname}</span><span class="twitwhen">@ ${aTwit.createdAt.toLocaleString('en-US')}</span></p>
+                    <p class='twitconntent'>${aTwit.content}</p>
+                    ${aTwit.isMine ? `<form action="/deltwit" method="post">
+                                        <input type="hidden" name="twitToDel" id="twitToDel" value="${aTwit.id}">
+                                        <input type="submit" value="&#128465">
+                                    </form>` : ''}
+            </div>`, '')
+        }
+    </div>
     
+    <form action="/twit" method="post">
+        <input type="text" name="twit" id="twit" required>
+        <input type="submit" name="submit" value="Twit!" />
+    </form>
+
+    <form action="/usersettings" method="get">
+        <input type="submit" name="submit" value="&#9881"/>
+    </form>
+
+    <form action="/signout" method="post">
+        <input type="submit" name="signout" value="signout"/>
+    </form>
 </body>
 </html>
