Wording clean up

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -24,7 +24,7 @@
     ${signinform}
 
     ${
-        err ? `<div class='errmsg'><p>${err} -- Please try again.</p></div>` : ''
+        err ? `<div class='errmsg'><p>${err} Please try again.</p></div>` : ''
     }
 
     <h3>Otherwise, please <a href="/signup">Sign Up...</a></h3>
