Added more project meta info

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="project-meta">
-        This page demonstrates reading, writing, and deleting from Postgres, as well as Express 
-        templates and JWT token validation.
+        ${metapreamble}
+
+        <p>This page demonstrates: reading, writing, and deleting from Postgres, as well as Express, Express 
+        templates, and JWT token validation.</p>
+
+        ${metaghlink}
     </div>
     <div class="twitcontainer">
         ${
