--- a/templates/signin.html
+++ b/templates/signin.html
@@ -11,12 +11,12 @@
     <h1>Welcome to Twit-ish!</h1>
 
     <div class="project-meta">
-        <p>This is my Digitalcrafts Flex 2021 CRUD backend project. It is a lightweight Twitter clone that 
-            is used to demonstrate the following backend technologies: bcrypt, JWT, Express, Express 
-            Templates, Sequelize, Postgres</p>
+        ${metapreamble}
 
         <p>This page demonstrates: Reading from Postgres, authorization and token creation via bcrypt and JWT 
-            as well as Express Templates if there is an error.</p>
+            as well as Exrepss and Express Templates.</p>
+
+        ${metaghlink}
     </div>
 
     <h2>Existing user? Please Sign In...</h2>
