--- a/templates/signup-success.html
+++ b/templates/signup-success.html
@@ -13,7 +13,11 @@
     <h2>Please Sign In...</h2>
 
     <div class="project-meta">
-        <p>This page demonstrates Express Templates.</p>
+        ${metapreamble}
+
+        <p>This page demonstrates: Express and Express Templates.</p>
+
+        ${metaghlink}
     </div>
 
     ${signinform}
