--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="project-meta">
-        This page demonstrates writing to Postgres, as well as Express templates if there is an error.
+        ${metapreamble}
+
+        <p>This page demonstrates: writing to Postgres, as well as Express and Express templates.</p>
+
+        ${metaghlink}
     </div>
 
     <form action="/signup" method="post">
