--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
+<div class='fff'>
     <h1>Welcome to Twit-ish!</h1>
 
     <div class="project-meta">
@@ -28,6 +29,6 @@
     }
 
     <h3>Otherwise, please <a href="/signup">Sign Up...</a></h3>
-    
+</div>
 </body>
 </html>
