--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,6 +14,38 @@
     font-weight: lighter;
 }
 
+h1{
+    text-align:center;
+}
+
+html, body{
+    height: 100%;
+    background-color: #F4EEFF;
+    color: #424874;
+}
+
+.fff{
+    width: 80%;
+    margin: 0 auto;
+    height: 100%;
+}
+
+.twitcontainer{
+    width: 50%;
+    margin: 0 auto;
+    background-color: #A6B1E1;
+}
+
+.twitform{
+    width: 50%;
+    margin: 0 auto;
+
+}
+
+#twitinput{
+    padding: 20px;
+}
+
 .errmsg{
     background: #FFCCCB;
     color: darkred;
@@ -27,13 +59,9 @@
 
 .project-meta{
     border: 1px solid black;
-    background: lightgray;
+    background: #DCD6F7;
     font-weight: bolder;
     margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
-
-/* .twitcontainer{
-    display: grid;
-    align-content: center;
-    justify-content: center;
-} */
