--- a/templates/partials/meta-gh-link.html
+++ b/templates/partials/meta-gh-link.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/42gmh/backend-project">Git Hub Repo</a>
+<p><a href="https://github.com/42gmh/backend-project">Git Hub Repo</a></p>
