--- a/templates/partials/signin-form.html
+++ b/templates/partials/signin-form.html
@@ -1,7 +1,11 @@
 <form action="/signin" method="post">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <div>
+        <input type="text" name="username" id="username" required>
+        <label for="username">Username</label>
+    </div>
+    <div>
+        <input type="password" name="password" id="password" required>
+        <label for="password">Password</label>
+    <div>
     <input type="submit" name="submit" value="Log In" />
 </form>  
