--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-<div class='fff'>
+<div class='root-container'>
     <h1>Welcome to Twit-ish!</h1>
 
     <div class="project-meta">
