--- a/templates/signup-success.html
+++ b/templates/signup-success.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-    <h1>Signup Successful!</h1>
+    <div class="root-container">
+        <h1>Twit-ish Signup Successful!</h1>
 
-    <h2>Please Sign In...</h2>
+        <h2>Please Sign In...</h2>
 
-    <div class="project-meta">
-        ${metapreamble}
+        <div class="project-meta">
+            ${metapreamble}
 
-        <p>This page demonstrates: Express and Express Templates.</p>
+            <p>This page demonstrates: Express and Express Templates.</p>
 
-        ${metaghlink}
+            ${metaghlink}
+        </div>
+
+        ${signinform}
     </div>
-
-    ${signinform}
 </body>
 </html>
